--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -2,5 +2,5 @@ body {
     background: url("https://i.imgur.com/0YwexzO.jpg");
 }
 h1 {
-  font-family: "Malisia Script";
+  font-family: "Helvetica";
 }
