--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,8 +1,9 @@
 body {
     background: url("https://i.imgur.com/0YwexzO.jpg");
+    background-size: cover;
 }
 h1 {
-  font-family: "Helvetica";
+  font-family: Helvetica;
 }
 img {
   width: 100%;
