--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,6 +1,7 @@
 body {
-    background: url("https://i.imgur.com/0YwexzO.jpg");
+    background: url("https://i.imgur.com/otjff0e.jpg");
     background-size: cover;
+    color: white;
 }
 h1 {
   font-family: Helvetica;
