--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -3,5 +3,9 @@ body {
     background-size: cover;
     color: white;
     font-family: Helvetica, cursive;
-    text-align: center;
+    text-align: left;
+
+}
+.a {
+  color: white;
 }
