--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -9,8 +9,8 @@ body {
   color: white;
 }
 ul {
-    text-align: center;
-    list-style-type: none;
+  margin: 0 auto;
+  width: 300px;
 }
 #slogan {
     font-style: italic;
