--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -4,6 +4,7 @@ body {
     background-color: #000;
     background-size: cover;
     text-align: center;
+    color: white;
 }
 h1 {
     font-family: 'Overpass', sans-serif;
