--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -5,6 +5,8 @@ body {
     background-size: cover;
     text-align: center;
     color: white;
+    font-family: 'EB Garamond', serif;
+	  font-size: 18px;
 }
 h1 {
     font-family: 'Overpass', sans-serif;
