--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -2,21 +2,19 @@
 
 body {
     background-color: #000;
-    background-size: cover;
     text-align: center;
     color: white;
     font-family: 'EB Garamond', serif;
 	  font-size: 18px;
+    line-height:1.5;
 }
 h1 {
     font-family: 'Overpass', sans-serif;
+    font-size:3em;
+    font-weight:400;
 }
-
 p {
-    font-family: 'EB Garamond', serif;
-	  font-size: 18px;
-	  line-height: 1.5em;
-	  margin: 2em;
+	  margin-top: 1em;
 }
 .a {
     color: white;
